--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4797,7 +4797,7 @@ small {
 }
 
 .tabs .tab a {
-  color: rgba(238, 110, 115, 0.7);
+  color: #29b6f6 !important;
   display: block;
   width: 100%;
   height: 100%;
@@ -4810,7 +4810,7 @@ small {
 
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #ee6e73;
+  color: #29b6f6 !important;
 }
 
 .tabs .tab.disabled a,
@@ -4823,7 +4823,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: #29b6f6 !important;
   will-change: left, right;
 }
 
