--- a/css/style.css
+++ b/css/style.css
@@ -622,3 +622,23 @@ a:hover#logo-container{
   font-size: 18px;
   color: #00BCD4;
 }
+
+@media (max-width: 767px) {
+.section {
+padding: 30px;
+}
+.section-title {
+font-size: 20px;
+}
+.timeline {
+margin-left: 0;
+padding-right: 0;
+}
+.timeline .place {
+margin-bottom: 5px;
+}
+.timeline .job-meta {
+position: static;
+margin-bottom: 15px;
+}
+}
